// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`states endpoint | PUT /states when authenticated as a user with an associated state with a medicaid director with an invalid email 1`] = `
Object {
  "error": "edit-state-invalid-medicaid-office",
}
`;

exports[`states endpoint | PUT /states when authenticated as a user with an associated state with a medicaid director with an invalid name 1`] = `
Object {
  "error": "edit-state-invalid-medicaid-office",
}
`;

exports[`states endpoint | PUT /states when authenticated as a user with an associated state with a medicaid director with an invalid phone 1`] = `
Object {
  "error": "edit-state-invalid-medicaid-office",
}
`;

exports[`states endpoint | PUT /states when authenticated as a user with an associated state with a medicaid office with an invalid address1 1`] = `
Object {
  "error": "edit-state-invalid-medicaid-office",
}
`;

exports[`states endpoint | PUT /states when authenticated as a user with an associated state with a medicaid office with an invalid address2 1`] = `
Object {
  "error": "edit-state-invalid-medicaid-office",
}
`;

exports[`states endpoint | PUT /states when authenticated as a user with an associated state with a medicaid office with an invalid city 1`] = `
Object {
  "error": "edit-state-invalid-medicaid-office",
}
`;

exports[`states endpoint | PUT /states when authenticated as a user with an associated state with a medicaid office with an invalid city 2`] = `
Object {
  "error": "edit-state-invalid-medicaid-office",
}
`;

exports[`states endpoint | PUT /states when authenticated as a user with an associated state with a medicaid office with an invalid zip 1`] = `
Object {
  "error": "edit-state-invalid-medicaid-office",
}
`;

exports[`states endpoint | PUT /states when authenticated as a user with an associated state with a valid update 1`] = `
Object {
  "id": "mn",
  "medicaid_office": Object {
    "address1": "100 Round Sq",
    "city": "Cityville",
    "director": Object {
      "email": "c.fudge@ministry.magic",
      "name": "Cornelius Fudge",
      "phone": "5551234567",
    },
    "state": "Minnesota",
    "zip": "12345",
  },
  "name": "Minnesota",
  "program_benefits": "new program benefits",
  "program_vision": "The program vision is 20/20",
  "state_pocs": Array [
    Object {
      "email": "corinne@thatplace",
      "name": "Corinne Johnson",
      "position": "Head of Muggle Studies",
    },
  ],
}
`;

exports[`states endpoint | PUT /states when authenticated as a user with an associated state with an empty medicaid office 1`] = `
Object {
  "error": "edit-state-invalid-medicaid-office",
}
`;

exports[`states endpoint | PUT /states when authenticated as a user with an associated state with an invalid program benefits statement 1`] = `
Object {
  "error": "edit-state-invalid-benefits",
}
`;

exports[`states endpoint | PUT /states when authenticated as a user with an associated state with an invalid program vision statement 1`] = `
Object {
  "error": "edit-state-invalid-vision",
}
`;

exports[`states endpoint | PUT /states when authenticated as a user with an associated state with points of contact with invalid email 1`] = `
Object {
  "error": "edit-state-invalid-state-pocs",
}
`;

exports[`states endpoint | PUT /states when authenticated as a user with an associated state with points of contact with invalid name 1`] = `
Object {
  "error": "edit-state-invalid-state-pocs",
}
`;

exports[`states endpoint | PUT /states when authenticated as a user with an associated state with points of contact with invalid position 1`] = `
Object {
  "error": "edit-state-invalid-state-pocs",
}
`;

exports[`states endpoint | PUT /states when authenticated as a user without an associated state 1`] = `undefined`;
